# ticket_farmer

./: .gitignore  README.md  config.py  main.py  pyproject.toml
medicservice/: types.py
